2010-11-24  Kristian Amlie  <kristian.amlie@nokia.com>

Reviewed by Andreas Kling.

        Fixed handling of QInputMethodEvents with nonzero replacementLength.

        These types of events replace text that is already in the widget, but
        WebKit did not check for replacementLength at all.

        https://bugs.webkit.org/show_bug.cgi?id=49787

        * Api/qwebpage.cpp:
        (QWebPagePrivate::inputMethodEvent):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods):

Canonical link: https://commits.webkit.org/63158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72697 268f45cc-cd09-0410-ab3c-d52691b4dbfc